# trace-agent

./: .env.example  .gitignore  CLAUDE.md  LAUNCH.md  README.md  agenttrace.py  demo.html  demo.py  pyproject.toml  test_diagnosis.py  test_diff_renderer.py  test_explain_engine.py  test_health.py  test_run.py  test_single_run.py  test_single_run_view.py  test_stream_server.py  test_streaming.py  test_stuck_alert.py  test_trace_diff.py  test_trace_diff_causal.py  test_v2_compiler.py  test_variable_analysis.py  trace_TestAgent2_1777522883589_1.json  trace_TestAgent2_1777522883590_2.json  trace_TestAgent_1777522693597_1.json  trace_TestAgent_1777522693597_2.json  verify_fork.py
.claude/: settings.local.json
agent-trace-ui/: index.html  package-lock.json  package.json  server.py  start.bat  trace_BuggyAgent_1777543462092_1.json  trace_BuggyAgent_1777543462093_2.json  trace_BuggyAgent_1777543467724_3.json  trace_BuggyAgent_1777543467726_4.json  trace_BuggyAgent_1777543539768_5.json  trace_BuggyAgent_1777543539770_6.json  trace_BuggyAgent_1777543607973_7.json  trace_BuggyAgent_1777543607975_8.json  trace_BuggyAgent_1777543613376_9.json  trace_BuggyAgent_1777543613377_10.json  trace_BuggyAgent_1777543707829_11.json  trace_BuggyAgent_1777543707831_12.json  trace_BuggyAgent_1777543939952_13.json  trace_BuggyAgent_1777543939953_14.json  trace_BuggyAgent_1777543946432_15.json  trace_BuggyAgent_1777543946433_16.json  trace_BuggyAgent_1777544189288_17.json  trace_BuggyAgent_1777544189289_18.json  trace_BuggyAgent_1777544198355_19.json  trace_BuggyAgent_1777544198356_20.json  trace_BuggyAgent_1777544723008_21.json  trace_BuggyAgent_1777544723009_22.json  vite.config.ts
agent-trace-ui/public/: demo_trace.json  dev_trace.json
agent_obs/: __init__.py  cli_main.py  diagnosis.py  diff_renderer.py  emitter.py  enable.py  execution_graph.py  frontend_adapter.py  health.py  observe.py  replay.py  run.py  single_run.py  single_run_view.py  stream_server.py  trace.py  trace_core.py  trace_diff.py  trace_export.py  trace_viewer.py  variable_analysis.py
agenttrace/: __init__.py
assets/: fork-preview.html
demo_agent/: __init__.py  agent.py  memory.py  planner.py
docs/: 01-产品需求.md  02-技术架构.md  03-设计规范.md  04-开发路线图.md  README.md
examples/: autonomous_agent.py  buggy_agent.py  case_mild_discomfort.json  case_severe_critical.json  demo_agent.py  demo_cases.py  diff_demo.py  langchain_travel_agent.py  real_agent_demo.py  sdk_examples.py  single_run_langgraph.py  streaming_demo.html  streaming_demo.py  test_agent.py  travel_planner.py
server/: demo_server.py
开发日志/: 2026-07-22.md  2026-07-23.md  README.md
(+32 files in other folders)
