[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttrace"
version = "1.0.0"
description = "Chrome DevTools for AI Agents — causal graph diff explaining WHY agents diverge"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai-agent", "debugging", "observability", "tracing", "langchain", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/agenttrace/agenttrace"
Repository = "https://github.com/agenttrace/agenttrace"

[project.scripts]
agenttrace = "agent_obs.cli_main:main"

[tool.setuptools]
py-modules = ["demo"]

[tool.setuptools.data-files]
"agent-trace-ui" = ["agent-trace-ui/server.py"]
"agent-trace-ui/dist" = [
    "agent-trace-ui/dist/index.html",
    "agent-trace-ui/dist/icons.svg",
    "agent-trace-ui/dist/dev_trace.json",
    "agent-trace-ui/dist/demo_trace.json",
]
"agent-trace-ui/dist/assets" = ["agent-trace-ui/dist/assets/*"]

[tool.setuptools.packages.find]
include = ["agent_obs*", "agenttrace*"]
